Translated password manager popups

--- a/platform_res/android/app/src/main/res/layout/dialog_password_manager_prompt.xml
+++ b/platform_res/android/app/src/main/res/layout/dialog_password_manager_prompt.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-black"
-            android:text="Please enter your master password"
+            android:text="@string/pwm_prompt_title"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:text="Your master password is required to continue."
+            android:text="@string/pwm_prompt_subtitle"
             android:textAlignment="center" />
 
         <TextView
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:text="Sorry, try again"
+            android:text="@string/pwm_prompt_wrong_password"
             android:textAlignment="center"
             android:textColor="#D42222" />
 
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Use biometric authentification" />
+            android:text="@string/pwm_prompt_use_biometric_auth" />
 
         <LinearLayout
             android:id="@+id/llBiometricInitiate"
@@ -129,7 +129,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Cancel"
+                android:text="@string/pwm_prompt_cancel"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp">
 
@@ -155,7 +155,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Next"
+                android:text="@string/pwm_prompt_next"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp">
 
