--- a/platform_res/android/app/src/main/res/layout/dialog_password_manager_create.xml
+++ b/platform_res/android/app/src/main/res/layout/dialog_password_manager_create.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-black"
-            android:text="Please create your master password"
+            android:text="@string/pwm_create_title"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:fontFamily="sans-serif-light"
-            android:text="Your master password will secure all apps passwords into a safe place."
+            android:text="@string/pwm_create_subtitle"
             android:textAlignment="center" />
 
         <EditText
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Enter password"
+            android:hint="@string/pwm_create_enter_passwod"
             android:inputType="textPassword">
 
             <requestFocus />
@@ -67,8 +67,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Repeat password"
-            android:inputType="textPassword"/>
+            android:hint="@string/pwm_create_repeat_password"
+            android:inputType="textPassword" />
 
     </LinearLayout>
 
@@ -98,7 +98,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Cancel"
+                android:text="@string/pwm_create_cancel"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp">
 
@@ -124,7 +124,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Create"
+                android:text="@string/pwm_create_create"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp">
 
