Added missing PWM popup translation

--- a/platform_res/android/app/src/main/res/values-fr/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-fr/i18n.xml
@@ -4,6 +4,7 @@
     <string name="pwm_prompt_subtitle">Votre mot de passe principal est requis pour continuer.</string>
     <string name="pwm_prompt_wrong_password">Veuillez réessayer.</string>
     <string name="pwm_prompt_use_biometric_auth">Authentification biométrique</string>
+    <string name="pwm_prompt_continue_with_biometry">Continuez pour vous authentifier par empreinte ou par reconnaissance faciale.</string>
     <string name="pwm_prompt_cancel">Annuler</string>
     <string name="pwm_prompt_next">Suivant</string>
     <string name="pwm_create_title">Création du mot de passe principal</string>
