--- a/platform_res/android/app/src/main/res/values/i18n.xml
+++ b/platform_res/android/app/src/main/res/values/i18n.xml
@@ -4,6 +4,7 @@
     <string name="pwm_prompt_subtitle">Your master password is required to continue.</string>
     <string name="pwm_prompt_wrong_password">Sorry, try again.</string>
     <string name="pwm_prompt_use_biometric_auth">Use biometric authentication</string>
+    <string name="pwm_prompt_continue_with_biometry">Continue to authenticate using fingerprint or face recognition</string>
     <string name="pwm_prompt_cancel">Cancel</string>
     <string name="pwm_prompt_next">Next</string>
     <string name="pwm_create_title">Please create your master password</string>
