--- a/platform_res/android/app/src/main/res/values-zh/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-zh/i18n.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="pwm_prompt_title">Please enter your master password</string>
-    <string name="pwm_prompt_subtitle">Your master password is required to continue.</string>
-    <string name="pwm_prompt_wrong_password">Sorry, try again.</string>
-    <string name="pwm_prompt_use_biometric_auth">Use biometric authentication</string>
-    <string name="pwm_prompt_continue_with_biometry">Continue to authenticate using fingerprint or face recognition</string>
-    <string name="pwm_prompt_cancel">Cancel</string>
-    <string name="pwm_prompt_next">Next</string>
-    <string name="pwm_create_title">Please create your master password</string>
-    <string name="pwm_create_subtitle">Your master password will secure all apps passwords into a safe place.</string>
-    <string name="pwm_create_enter_passwod">Enter password</string>
-    <string name="pwm_create_repeat_password">Repeat password</string>
-    <string name="pwm_create_cancel">Cancel</string>
-    <string name="pwm_create_create">Create</string>
+    <string name="pwm_prompt_title">请输入您的主密码</string>
+    <string name="pwm_prompt_subtitle">需要输入您的主密码才能继续</string>
+    <string name="pwm_prompt_wrong_password">抱歉，请再试一次</string>
+    <string name="pwm_prompt_use_biometric_auth">使用生物特征认证</string>
+    <string name="pwm_prompt_continue_with_biometry">继续使用指纹或面部识别进行身份验证</string>
+    <string name="pwm_prompt_cancel">取消</string>
+    <string name="pwm_prompt_next">下一步</string>
+    <string name="pwm_create_title">请创建您的主密码</string>
+    <string name="pwm_create_subtitle">您的主密码会将所有应用的密码保存在安全的地方。</string>
+    <string name="pwm_create_enter_passwod">输入密码</string>
+    <string name="pwm_create_repeat_password">请再次输入密码</string>
+    <string name="pwm_create_cancel">取消</string>
+    <string name="pwm_create_create">创建</string>
 </resources>
