--- a/platform_res/android/app/src/main/res/values-zh/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-zh/i18n.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="pwm_prompt_title">请输入您的主密码</string>
     <string name="pwm_prompt_subtitle">需要输入您的主密码才能继续</string>
-    <string name="pwm_prompt_wrong_password">抱歉，请再试一次</string>
+    <string name="pwm_prompt_wrong_password">密码错误，请重新输入</string>
     <string name="pwm_prompt_use_biometric_auth">使用生物特征认证</string>
     <string name="pwm_prompt_continue_with_biometry">继续使用指纹或面部识别进行身份验证</string>
     <string name="pwm_prompt_cancel">取消</string>
