Show an error message when passwords don't match

--- a/platform_res/android/app/src/main/res/layout/dialog_password_manager_create.xml
+++ b/platform_res/android/app/src/main/res/layout/dialog_password_manager_create.xml
@@ -51,6 +51,15 @@
             android:text="@string/pwm_create_subtitle"
             android:textAlignment="center" />
 
+        <TextView
+            android:id="@+id/lblWrongPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/pwm_create_no_match"
+            android:textAlignment="center"
+            android:textColor="#D42222" />
+
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
