--- a/platform_res/android/app/src/main/res/layout/fragment_intent_action_chooser.xml
+++ b/platform_res/android/app/src/main/res/layout/fragment_intent_action_chooser.xml
@@ -14,7 +14,7 @@
         android:layout_weight="0"
         android:background="#F0F0F0"
         android:padding="10dp"
-        android:text="Continue this action with:"
+        android:text="@string/intent_choose_title"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#555555" />
