Improve the MasterPasswordCreator when the two password is different ios

--- a/platform_src/ios/elastOS/Classes/PasswordManager/Dialogs/MasterPasswordCreator.xib
+++ b/platform_src/ios/elastOS/Classes/PasswordManager/Dialogs/MasterPasswordCreator.xib
@@ -17,6 +17,7 @@
                 <outlet property="etPasswordRepeat" destination="Tqe-Gb-TjR" id="qFX-7E-pW8"/>
                 <outlet property="imgIcon" destination="GHI-u7-pJX" id="jO3-cs-ruC"/>
                 <outlet property="lblIntroduction" destination="LNL-YU-SRv" id="jej-6e-G5Z"/>
+                <outlet property="lblPasswordsDontMatch" destination="jm2-vF-pfs" id="aOm-MD-8nj"/>
                 <outlet property="lblTitle" destination="qsI-4b-zHh" id="ScQ-5L-D1X"/>
                 <outlet property="passwordRepeatUnderline" destination="5bn-Ju-WWX" id="9Lm-UY-xmu"/>
                 <outlet property="passwordUnderline" destination="tjf-PS-zGL" id="Eq2-5G-Jnm"/>
@@ -56,12 +57,23 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Your master password will secure all apps passwords into a safe place." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNL-YU-SRv">
-                            <rect key="frame" x="20" y="47" width="355" height="325"/>
-                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="isc-dm-uS5">
+                            <rect key="frame" x="20" y="58" width="355" height="314"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Your master password will secure all apps passwords into a safe place." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNL-YU-SRv">
+                                    <rect key="frame" x="0.0" y="0.0" width="355" height="288"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Passwords don't match" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jm2-vF-pfs" userLabel="Try again">
+                                    <rect key="frame" x="0.0" y="298" width="355" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                    <color key="textColor" red="0.83137254900000002" green="0.1333333333" blue="0.1333333333" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bwk-3m-USR" userLabel="Password">
                             <rect key="frame" x="20" y="392" width="355" height="35"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,18 +110,18 @@
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="tjf-PS-zGL" firstAttribute="trailing" secondItem="Bwk-3m-USR" secondAttribute="trailing" id="7TS-UQ-qMY"/>
-                        <constraint firstItem="LNL-YU-SRv" firstAttribute="top" secondItem="qsI-4b-zHh" secondAttribute="bottom" constant="9" id="AEY-rj-jxw"/>
+                        <constraint firstItem="isc-dm-uS5" firstAttribute="leading" secondItem="wzb-T2-7NI" secondAttribute="leading" constant="20" id="9km-GY-4g2"/>
+                        <constraint firstItem="Bwk-3m-USR" firstAttribute="top" secondItem="isc-dm-uS5" secondAttribute="bottom" constant="20" id="Am3-Fs-35v"/>
                         <constraint firstItem="5bn-Ju-WWX" firstAttribute="bottom" secondItem="Tqe-Gb-TjR" secondAttribute="bottom" id="G1B-Xx-ryN"/>
                         <constraint firstAttribute="trailing" secondItem="Bwk-3m-USR" secondAttribute="trailing" constant="20" id="JYB-fx-4hH"/>
+                        <constraint firstItem="isc-dm-uS5" firstAttribute="top" secondItem="qsI-4b-zHh" secondAttribute="bottom" constant="20" id="Lmb-ko-GNE"/>
                         <constraint firstAttribute="bottom" secondItem="Tqe-Gb-TjR" secondAttribute="bottom" constant="20" id="Nwq-gj-ybM"/>
                         <constraint firstItem="tjf-PS-zGL" firstAttribute="bottom" secondItem="Bwk-3m-USR" secondAttribute="bottom" id="S55-pQ-Gv6"/>
-                        <constraint firstAttribute="trailing" secondItem="LNL-YU-SRv" secondAttribute="trailing" constant="20" id="TMB-R4-xPh"/>
                         <constraint firstItem="Tqe-Gb-TjR" firstAttribute="leading" secondItem="Bwk-3m-USR" secondAttribute="leading" id="TPt-4N-AKs"/>
                         <constraint firstItem="qsI-4b-zHh" firstAttribute="top" secondItem="wzb-T2-7NI" secondAttribute="top" constant="20" id="VcU-0e-cn3"/>
                         <constraint firstItem="Bwk-3m-USR" firstAttribute="leading" secondItem="wzb-T2-7NI" secondAttribute="leading" constant="20" id="Wcb-fi-p0T"/>
-                        <constraint firstItem="Bwk-3m-USR" firstAttribute="top" secondItem="LNL-YU-SRv" secondAttribute="bottom" constant="20" id="dPh-z5-Szb"/>
+                        <constraint firstAttribute="trailing" secondItem="isc-dm-uS5" secondAttribute="trailing" constant="20" id="apA-mf-3RQ"/>
                         <constraint firstItem="Tqe-Gb-TjR" firstAttribute="trailing" secondItem="Bwk-3m-USR" secondAttribute="trailing" id="db0-cB-4IT"/>
-                        <constraint firstItem="LNL-YU-SRv" firstAttribute="leading" secondItem="wzb-T2-7NI" secondAttribute="leading" constant="20" id="efT-8f-ssn"/>
                         <constraint firstItem="Tqe-Gb-TjR" firstAttribute="top" secondItem="Bwk-3m-USR" secondAttribute="bottom" constant="15" id="hkk-nx-JKA"/>
                         <constraint firstItem="5bn-Ju-WWX" firstAttribute="trailing" secondItem="Tqe-Gb-TjR" secondAttribute="trailing" id="jfA-sD-nnW"/>
                         <constraint firstItem="5bn-Ju-WWX" firstAttribute="leading" secondItem="Tqe-Gb-TjR" secondAttribute="leading" id="piw-Cc-lhx"/>
