--- a/platform_src/ios/elastOS/Classes/PasswordManager/Dialogs/MasterPasswordPrompter.xib
+++ b/platform_src/ios/elastOS/Classes/PasswordManager/Dialogs/MasterPasswordPrompter.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MasterPasswordPrompterAlertController" customModule="elastOS" customModuleProvider="target">
             <connections>
+                <outlet property="biometricStack" destination="QGS-h1-nFn" id="VwC-Mw-kCb"/>
                 <outlet property="btCancel" destination="NUA-01-MAL" id="ACD-eC-3Uw"/>
                 <outlet property="btNext" destination="pwx-0a-j8T" id="f11-ka-U1p"/>
                 <outlet property="contentBackground" destination="xSA-jk-Pao" id="Qlj-wK-Jsu"/>
