--- a/platform_res/android/app/src/main/res/layout/title_bar.xml
+++ b/platform_res/android/app/src/main/res/layout/title_bar.xml
@@ -10,20 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingBottom="4dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp">
 
         <org.elastos.trinity.runtime.titlebar.TitleBarIconView
             android:id="@+id/btnOuterLeft"
-            android:layout_width="40dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="0" />
 
         <org.elastos.trinity.runtime.titlebar.TitleBarIconView
             android:id="@+id/btnInnerLeft"
-            android:layout_width="40dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="0" />
@@ -35,14 +34,14 @@
 
         <org.elastos.trinity.runtime.titlebar.TitleBarIconView
             android:id="@+id/btnInnerRight"
-            android:layout_width="40dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="0" />
 
         <org.elastos.trinity.runtime.titlebar.TitleBarIconView
             android:id="@+id/btnOuterRight"
-            android:layout_width="40dp"
+            android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="0" />
@@ -53,13 +52,12 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="4dp"
         android:layout_weight="1"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="16sp"
+        android:textSize="15sp"
         tools:text="In-app test title"></TextView>
 
     <TextView
@@ -81,7 +79,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <View
                 android:id="@+id/progressBarBackground"
