New design and translation for the URL permission popup (android)

--- a/platform_res/android/app/src/main/res/layout/dialog_password_manager_prompt.xml
+++ b/platform_res/android/app/src/main/res/layout/dialog_password_manager_prompt.xml
@@ -17,11 +17,11 @@
 
         <ImageView
             android:id="@+id/ivAppIcon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_weight="0"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_secure" />
+            android:src="@drawable/ic_lock" />
 
     </LinearLayout>
 
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:fontFamily="sans-serif-light"
             android:inputType="textPassword">
 
             <requestFocus />
