--- a/platform_res/android/app/src/main/res/values-fr/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-fr/i18n.xml
@@ -25,8 +25,13 @@
     <string name="api_perm_deny">Refuser</string>
     <string name="api_perm_accept">Autoriser</string>
 
+    <string name="url_perm_title">Accès à une URL</string>
+    <string name="url_perm_subtitle">Cette capsule souhaite appeler une adresse internet externe à elastOS. Souhaitez-vous l\'autoriser?</string>
+    <string name="url_perm_capsule">Capsule:</string>
+    <string name="url_perm_address">Adresse:</string>
+
     <string name="intent_choose_title">Continuer cette action avec:</string>
     <string name="intent_choose_another">Autre application</string>
 
-    <string name="app_starting">Starting</string>
+    <string name="app_starting">Démarrage</string>
 </resources>
