--- a/platform_res/android/app/src/main/res/values/i18n.xml
+++ b/platform_res/android/app/src/main/res/values/i18n.xml
@@ -25,6 +25,11 @@
     <string name="api_perm_deny">Deny</string>
     <string name="api_perm_accept">Allow</string>
 
+    <string name="url_perm_title">URL Access Request</string>
+    <string name="url_perm_subtitle">This capsule wants to call an internet address outside of elastOS. Do you agree with this?</string>
+    <string name="url_perm_capsule">Capsule:</string>
+    <string name="url_perm_address">Address:</string>
+
     <string name="intent_choose_title">Continue this action with:</string>
     <string name="intent_choose_another">Another app</string>
 
