--- a/platform_res/android/app/src/main/res/values-zh/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-zh/i18n.xml
@@ -16,7 +16,7 @@
     <string name="pwm_create_cancel">取消</string>
     <string name="pwm_create_create">创建</string>
 
-    <string name="api_perm_title">该胶囊要求使用敏感功能.</string>
+    <string name="api_perm_title">该胶囊要求使用敏感功能</string>
     <string name="api_perm_feature">功能:</string>
     <string name="api_perm_description">胶囊通过此功能能做什么?</string>
     <string name="api_perm_risk_low">低风险</string>
