--- a/platform_src/ios/elastOS/Classes/IntentActionChooserController.xib
+++ b/platform_src/ios/elastOS/Classes/IntentActionChooserController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IntentActionChooserController" customModule="elastOS" customModuleProvider="target">
             <connections>
+                <outlet property="lblTitle" destination="cZF-G1-yGz" id="CbB-iL-n4z"/>
                 <outlet property="listItemsStackView" destination="5ec-qC-XI3" id="e9D-Ce-Fb1"/>
                 <outlet property="view" destination="32Y-Ug-eVP" id="9Om-lL-faD"/>
             </connections>
