--- a/platform_res/android/app/src/main/res/values-fr/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-fr/i18n.xml
@@ -34,4 +34,12 @@
     <string name="intent_choose_another">Autre application</string>
 
     <string name="app_starting">Démarrage</string>
+
+    <string name="notification_name_was_added_new"> was just added as a new contact. Touch to view his/her profile.</string>
+    <string name="notification_someone_was_added_new">Someone was just added as a new contact. Touch to view his/her profile.</string>
+    <string name="notification_name_want_add"> wants to add you as a contact. Touch to view more details.</string>
+    <string name="notification_someone_want_add">Someone wants to add you as a contact. Touch to view more details.</string>
+    <string name="notification_name_accept_invitation"> has accepted your invitation. Touch to view details.</string>
+    <string name="notification_someone_accept_invitation">Your friend has accepted your invitation. Touch to view details.</string>
+
 </resources>
