--- a/platform_res/android/app/src/main/res/values-zh/i18n.xml
+++ b/platform_res/android/app/src/main/res/values-zh/i18n.xml
@@ -34,4 +34,12 @@
     <string name="intent_choose_another">其它应用</string>
 
     <string name="app_starting">正在启动</string>
+
+    <string name="notification_name_was_added_new">刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。</string>
+    <string name="notification_someone_was_added_new">有人刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。</string>
+    <string name="notification_name_want_add">想将您添加为联系人。 轻触以查看更多详细信息。</string>
+    <string name="notification_someone_want_add">有人想将您添加为联系人。 轻触以查看更多详细信息。</string>
+    <string name="notification_name_accept_invitation">已接受您的邀请。 触摸以查看详细信息。</string>
+    <string name="notification_someone_accept_invitation">您的朋友已接受您的邀请。 触摸以查看详细信息。</string>
+
 </resources>
