--- a/platform_src/electron/titlebar/src/app/home/home.page.scss
+++ b/platform_src/electron/titlebar/src/app/home/home.page.scss
@@ -3,15 +3,22 @@ ion-content {
 }
 
 .icon {
-  height:64px;
-  padding-top:18px;
-  padding-bottom:18px;
-  filter: invert(48%) sepia(13%) saturate(307%) hue-rotate(130deg) brightness(95%) contrast(80%);
+    height:64px;
+    padding-top:18px;
+    padding-bottom:18px;
+    /*filter: invert(48%) sepia(13%) saturate(307%) hue-rotate(130deg) brightness(95%) contrast(80%);*/
 }
 
 .title {
-  text-align: center;
-  font-size: 20px;
-  color: #161740;
-  filter: invert(48%) sepia(13%) saturate(307%) hue-rotate(130deg) brightness(95%) contrast(80%);
+    text-align: center;
+    font-size: 20px;
+    /*color: #161740;*/
+    /*filter: invert(48%) sepia(13%) saturate(307%) hue-rotate(130deg) brightness(95%) contrast(80%);*/
+}
+
+.animationHint {
+    margin-top: -20px;
+    text-align: center;
+    font-size: 14px;
+    color: #FFFFFF;
 }
